--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
