--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "mdi": "^2.2.43",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
