--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^7.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
     "date-fns": "^2.29.3",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "mdi": "^2.2.43",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -22,6 +23,8 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
+    "simplebar-react": "^3.2.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.0",
     "web3": "^1.8.2"
   },
